--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,76 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Footbola App</title>
+		<meta name="description" content="Footbola PWA App">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#3f51b5"/>
+		<link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/icons/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/icons/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
+		<link rel="apple-touch-icon" href="/icons/apple-icon.png">
+		<link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
+		<link rel="preconnect" href="https://api.football-data.org" crossorigin>
+		<link rel="dns-prefetch" href="https://api.football-data.org">
+		<link rel="preconnect" href="https://upload.wikimedia.org" crossorigin>
+		<link rel="dns-prefetch" href="https://upload.wikimedia.org">
+		<link rel="preloader" href="/src/libs/materialize.min.css" as="style">
+		<link rel="stylesheet" href="/src/libs/materialize.min.css" media="print" onload="this.media='all'">
+		<noscript><link rel="stylesheet" href="/src/libs/materialize.min.css"></noscript>
+		<link rel="preloader" href="/src/css/page.css">
+		<link rel="stylesheet" href="/src/css/page.css">
+		<link rel="manifest" href="/manifest.json">
+		<link rel="preloader" href="https://fonts.googleapis.com/icon?family=Material+Icons" as="style">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	</head>
+	<body>
+		<header>
+			<nav class="top-nav">
+				<div class="container">
+					<div class="nav-wrapper">
+						<div class="row">
+							<div class="col s12">
+								<h2 class="header">Footbola</h2>
+							</div>
+						</div>
+					</div>
+				</div>
+			</nav>
+			<div class="container">
+				<a href="#" data-target="nav-mobile" class="top-nav sidenav-trigger full hide-on-large-only">
+					<i class="material-icons">menu</i>
+				</a>
+			</div>
+			<ul 
+			id="nav-mobile" 
+			class="sidenav sidenav-fixed"
+			style="overflow: 'auto'; transform: 'translateX(-105%)'" >
+				<li class="bold"><a href="#home" class="sidenav-close waves-effect waves-indigo">Home</a></li>
+				<li class="bold"><a href="#serieA" class="sidenav-close waves-effect waves-indigo">Serie A</a></li>
+				<li class="bold"><a href="#bundesliga" class="sidenav-close waves-effect waves-indigo">Bundesliga</a></li>
+				<li class="bold"><a href="#premiereleague" class="sidenav-close waves-effect waves-indigo">Premiere League</a></li>
+				<li class="bold"><a href="#primeradivision" class="sidenav-close waves-effect waves-indigo">Primera Division</a></li>
+				<li class="bold"><a href="#favorite" class="sidenav-close waves-effect waves-indigo">Your Favorite</a></li>
+			</ul>
+		</header>
+		<main id="content">
+			
+		</main>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.15.0/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.15.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.15.0/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.15.0/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.15.0/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+		<script src="src/js/serviceWorkerRegister.js"></script>
+		<script src="src/libs/materialize.min.js"></script>
+		<script async src="src/libs/lazysizes.min.js"></script>
+		<script src="src/data/teamData.js"></script>
+		<script src="src/data/favoriteData.js"></script>
+		<script src="src/services/idb.js" ></script>
+		<script src="src/services/dbController.js"></script>
+		<script src="src/js/main.js"></script>
+	</body>
 </html>
