--- a/public/pages/bundesliga.html
+++ b/public/pages/bundesliga.html
@@ -1,11 +1,15 @@
 <div class="card banner red lighten-5">
 	<div class="card-image league">
-		<img class="banner-logo lazyload" data-src="/assets/bundesligaLogo.png" alt="premiereleague logo"/>
+		<img class="banner-logo lazyload" data-src="../assets/bundesligaLogo.png" alt="premiereleague logo"/>
 	</div>
 	<div class="card-content" id="bannerContent">
 		
 	</div>
 </div> 			
 <article id="showTeams" class="standings">
-
+	<div id="loading" class="container center">
+		<div style="margin-top: 20%">
+			<img src="../assets/loading.gif" alt="Loading Spinner" />
+		</div>
+	</div>
 </article>
