--- a/public/pages/favorite.html
+++ b/public/pages/favorite.html
@@ -11,5 +11,9 @@
 	</div>
 </div> 			
 <article id="showFavorites" class="standings">
-
+	<div id="loading" class="container center">
+		<div style="margin-top: 20%">
+			<img src="../assets/loading.gif" alt="Loading Spinner" />
+		</div>
+	</div>
 </article>
