--- a/public/pages/premiereleague.html
+++ b/public/pages/premiereleague.html
@@ -7,5 +7,9 @@
 	</div>
 </div> 			
 <article id="showTeams" class="standings">
-
+	<div id="loading" class="container center">
+		<div style="margin-top: 20%">
+			<img src="../assets/loading.gif" alt="Loading Spinner" />
+		</div>
+	</div>
 </article>
